opa-gatekeeper/registry/repoConstraint-prod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: production
spec:
  serviceAccount: 
  containers:
    - name: nginx
      image: core.iaa8w.k8s.ginger.eu-central-1.aws.gigantic.io/security-workshop/nginx:latest
  imagePullSecrets:
    - name: harbor-registry
