opa-gatekeeper/registry/repoConstraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: prod-repo-is-harbor-<YOUR-NAME>
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "production-<YOUR-NAME>"
  parameters:
    repos:
      - "core.<YOUR-NAME>.qjif7.k8s.gollum.westeurope.azure.gigantic.io"
